fix: color in dark mode

--- a/last.css
+++ b/last.css
@@ -58,7 +58,7 @@ blockquote {
 }
 @media (prefers-color-scheme: dark) {
   blockquote {
-    background-color: rgba(var(--fc), 0.06);
+    background-color: rgba(var(--fc), 0.08);
   }
 }
 h1,
@@ -126,7 +126,6 @@ input[type=reset].btn {
   height: 2.5em;
   margin: 0;
   cursor: pointer;
-  background-color: rgba(var(--fc), 0.1);
   color: rgb(var(--fc));
 }
 a.btn:focus,
@@ -140,6 +139,22 @@ button.btn:active,
 input[type=submit].btn:active,
 input[type=reset].btn:active {
   opacity: 0.88;
+}
+@media (prefers-color-scheme: light) {
+  a.btn,
+  button.btn,
+  input[type=submit].btn,
+  input[type=reset].btn {
+    background-color: rgba(var(--fc), 0.1);
+  }
+}
+@media (prefers-color-scheme: dark) {
+  a.btn,
+  button.btn,
+  input[type=submit].btn,
+  input[type=reset].btn {
+    background-color: rgba(var(--fc), 0.16);
+  }
 }
 a.btn.contract,
 button.btn.contract,
@@ -180,10 +195,25 @@ label.input > input[type=password] {
   width: 100%;
   color: inherit;
   border-radius: calc(var(--fs) * 0.25);
-  border: 1px solid rgba(var(--fc), 0.1);
   height: 2.5em;
   font-size: var(--fs);
   padding: 0 0.75em;
+}
+@media (prefers-color-scheme: light) {
+  input.input,
+  select.input,
+  label.input > input:not([type]),
+  label.input > input[type=password] {
+    border: 1px solid rgba(var(--fc), 0.1);
+  }
+}
+@media (prefers-color-scheme: dark) {
+  input.input,
+  select.input,
+  label.input > input:not([type]),
+  label.input > input[type=password] {
+    border: 1px solid rgba(var(--fc), 0.2);
+  }
 }
 input.input:focus,
 select.input:focus,
