--- a/src/reset.styl
+++ b/src/reset.styl
@@ -33,7 +33,7 @@ blockquote
   +light()
     background-color: fc(.02)
   +dark()
-    background-color: fc(.06)
+    background-color: fc(.08)
   padding: us() 0 us() 1em
   font-size: fs-sm()
 
